# Integration-Kit-Sails

./: README.md
Chakra-UI-Vite-Template/: package.json
Chakra-UI-Vite-Template/src/: app.tsx  consts.ts
Chakra-UI-Vite-Template/src/components/layout/header/: header.tsx
Chakra-UI-Vite-Template/src/pages/: index.tsx
Chakra-UI-Vite-Template/src/pages/home/: Green-Color.tsx  ReadState.tsx  Red-Color.tsx  Yellow-Color.tsx  home.tsx
Chakra-UI-Vite-Template/src/pages/landing/: Landing.tsx
Chakra-UI-Vite-Template/src/pages/main/: Main.tsx
ReactComponentsExample/: Green-Color.tsx  ReadState.tsx  Red-Color.tsx  Yellow-Color.tsx  home.tsx
Smart-Contract-Template-temp/: Cargo.toml  Readme.md  build.rs
Smart-Contract-Template-temp/io/: Cargo.toml
Smart-Contract-Template-temp/io/src/: lib.rs
Smart-Contract-Template-temp/src/: lib.rs
Smart-Contract-Template-temp/state/: Cargo.toml
Smart-Contract-Template-temp/state/src/: lib.rs
Smart-Contract-Template-temp/tests/: tests.rs
Smart-Contract-Template/traffic-light/app/src/services/: traffic_light_service.rs
TrafficLightContract/: Cargo.toml  README.md
TrafficLightContract/io/src/: lib.rs
TrafficLightContract/src/: lib.rs
TrafficLightContract/state/src/: lib.rs
