[package]
name = "state"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
gmeta = { workspace = true, features = ["codegen"] }
gstd.workspace = true
parity-scale-codec.workspace = true
scale-info.workspace = true
io.workspace = true

[build-dependencies]
gear-wasm-builder = { workspace = true, features = ["metawasm"] }
